scaling/flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: flask
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flask
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: flask
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: flask
        image: chazapis/flask-hello:1
        resources:
          limits:
            cpu: "200m"
            memory: "128Mi"
