scaling/locust.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust
            port:
              number: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: locust
spec:
  type: ClusterIP
  ports:
  - port: 8089
  selector:
    app: locust
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust
  template:
    metadata:
      labels:
        app: locust
    spec:
      containers:
      - name: locust
        image: locustio/locust:2.8.4
        args:
          - "-f"
          - "/mnt/locust/locustfile.py"
        volumeMounts:
        - name: config-volume
          mountPath: /mnt/locust
      volumes:
      - name: config-volume
        configMap:
          name: locust-config
